# solar

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/rendering/: camera.cpp  camera.h  renderer.cpp  renderer.h  shader.cpp  shader.h  sphere_mesh.cpp  sphere_mesh.h  trail.cpp  trail.h
src/shaders/: body.frag  trail.vert
src/simulation/: body.h  physics.cpp  physics.h  solar_system_data.h
